--- a/src/App.css
+++ b/src/App.css
@@ -121,3 +121,37 @@ p {
   height: 65px;
   aspect-ratio: 1/1;
 }
+/* Centra tutto il contenuto del container */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+/* Imposta la disposizione delle immagini in due righe da 3 in modalità large */
+@media (min-width: 992px) {
+  .iconeSkills {
+    flex: 0 0 calc(33.333% - 1em);
+  }
+}
+
+/* Imposta la disposizione delle immagini in 2 colonne da 4 in modalità tablet */
+/* @media (max-width: 991px) {
+  .iconeSkills {
+    flex: 0 0 calc(50% - 1em);
+  }
+} */
+@media (max-width: 767px) {
+  .iconeSkills {
+    flex: 0 0 calc(50% - 1em);
+  }
+}
+
+/* Imposta la disposizione delle immagini in una colonna da 3 in modalità mobile */
+/* @media (max-width: 767px) {
+  .iconeSkills {
+    flex: 0 0 calc(100% - 1em);
+  }
+}
+ */
