--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@ body {
   background-color: #101114;
   color: seashell;
 }
-
+h2 {
+  margin-bottom: 2em;
+}
 .App {
   text-align: center;
 }
@@ -111,7 +113,6 @@ p {
   line-height: 1.9em;
 }
 
-/* ABOUT */
 .iconeSkills {
   margin: 0.5em;
 }
@@ -120,13 +121,7 @@ p {
   width: 65px;
   height: 65px;
   aspect-ratio: 1/1;
-}
-/* Centra tutto il contenuto del container */
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  margin-bottom: 1.5em;
 }
 
 /* Imposta la disposizione delle immagini in due righe da 3 in modalità large */
@@ -134,24 +129,19 @@ p {
   .iconeSkills {
     flex: 0 0 calc(33.333% - 1em);
   }
+  .textAbout {
+    font-size: x-large;
+  }
 }
 
-/* Imposta la disposizione delle immagini in 2 colonne da 4 in modalità tablet */
-/* @media (max-width: 991px) {
-  .iconeSkills {
-    flex: 0 0 calc(50% - 1em);
-  }
-} */
 @media (max-width: 767px) {
   .iconeSkills {
     flex: 0 0 calc(50% - 1em);
   }
-}
-
-/* Imposta la disposizione delle immagini in una colonna da 3 in modalità mobile */
-/* @media (max-width: 767px) {
-  .iconeSkills {
-    flex: 0 0 calc(100% - 1em);
+  .boxImg {
+    justify-content: center;
+  }
+  .textAbout {
+    font-size: larger;
   }
 }
- */
