--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@ html,
 body {
   background-color: #101114;
   color: seashell;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
 h2 {
   margin-bottom: 2em;
@@ -20,7 +23,9 @@ h2 {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+ul {
+  list-style: none;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -82,9 +87,10 @@ Form.Control {
 
 .foto {
   width: 200px;
-  height: 300px;
+  height: 200px;
   aspect-ratio: 1/1;
-
+  border-radius: 8em;
+  box-shadow: 1px 1px 4px 2px rgb(5 255 172 / 39%);
   margin-top: 2em;
 }
 
@@ -109,8 +115,10 @@ Button {
   color: rgb(3, 226, 152);
 }
 
-p {
+p,
+.frasi {
   line-height: 1.9em;
+  font-size: x-large;
 }
 
 .iconeSkills {
@@ -143,5 +151,107 @@ p {
   }
   .textAbout {
     font-size: larger;
+  }
+}
+
+/* HOME */
+
+.frasi {
+  text-indent: 10px;
+  margin-right: 25%;
+  margin-left: 25%;
+}
+.frasi i {
+  position: absolute;
+  opacity: 0;
+  overflow: hidden;
+  color: rgb(5, 255, 172);
+  padding-left: 40px;
+  -webkit-animation: AlternateText 12s linear infinite 0s;
+  -ms-animation: AlternateText 12s linear infinite 0s;
+  animation: AlternateText 12s linear infinite 0s;
+}
+.frasi i:nth-child(2) {
+  -webkit-animation-delay: 3s;
+  -ms-animation-delay: 3s;
+  animation-delay: 3s;
+  color: rgb(5, 255, 172);
+}
+.frasi i:nth-child(3) {
+  -webkit-animation-delay: 6s;
+  -ms-animation-delay: 6s;
+  animation-delay: 6s;
+  color: rgb(5, 255, 172);
+}
+.frasi i:nth-child(4) {
+  -webkit-animation-delay: 9s;
+  -ms-animation-delay: 9s;
+  animation-delay: 9s;
+  color: rgb(5, 255, 172);
+}
+@-webkit-keyframes AlternateText {
+  0% {
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  40% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes AlternateText {
+  0% {
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 0;
   }
 }
