--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@ html,
 body {
   background-color: #101114;
   color: seashell;
-  width: 100%;
-  height: 100%;
-  position: fixed;
+  width: 100dvw;
+  height: 100vh;
 }
 h2 {
   margin-bottom: 2em;
@@ -261,5 +260,27 @@ p {
   }
   100% {
     opacity: 0;
+  }
+}
+
+/*  ABOUT  */
+.iconeSkills {
+  transition: transform 3s;
+  animation: EntryImg 3s linear 0.5s 1;
+}
+
+.iconeSkills:hover {
+  transform: rotate(360deg);
+}
+
+@keyframes EntryImg {
+  0% {
+    transform: translate(-100px);
+  }
+  50% {
+    transform: translate(0px);
+  }
+  100% {
+    transform: trasnlate(300px);
   }
 }
