--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@ body {
 h2 {
   margin-bottom: 2em;
 }
+.sottotitoli {
+  font-style: italic;
+  color: rgb(3, 226, 152);
+  /* text-decoration: underline dotted rgb(3, 226, 152); */
+}
 .App {
   text-align: center;
 }
@@ -19,6 +24,10 @@ h2 {
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.containerAbout {
+  max-height: fit-content;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -134,7 +143,8 @@ Form.Control {
   }
 }
 
-Button {
+Button,
+h1 {
   color: rgb(3, 226, 152);
 }
 
