--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,9 @@ h2 {
   pointer-events: none;
 }
 
+a {
+  text-decoration: none;
+}
 .containerAbout {
   max-height: fit-content;
 }
@@ -235,7 +238,14 @@ p {
 }
 
 /* HOME */
-
+.bottoneCv {
+  border: 2px solid rgb(5, 255, 172);
+  color: white;
+  height: 40px;
+  font-weight: bold;
+  font-size: thin;
+  padding: 5px;
+}
 .frasi {
   text-indent: 10px;
   margin-right: 23%;
@@ -345,6 +355,9 @@ p {
 .carta {
   position: relative;
   overflow: hidden;
+  max-height: 45rem;
+  min-height: 30rem;
+  min-width: 280px;
 }
 
 .info {
@@ -390,4 +403,9 @@ p {
 
     opacity: 1;
   }
+}
+
+.coverPortfolio {
+  width: 100%;
+  height: 90%;
 }
