--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,9 @@ body {
   padding: 0;
   background-image: url("./assets/images/sfondoFigo.png");
   background-color: #242323;
-  margin-top: auto;
-  margin-bottom: auto;
   margin-right: auto;
   margin-left: auto;
+  padding: 0;
 }
 
 @media (min-width: 1200px) {
@@ -336,7 +335,7 @@ p {
 
 /*  PORTFOLIO */
 
-.bottomCard {
+/* .bottomCard {
   color: seashell;
   background: rgb(102, 158, 218);
   background: linear-gradient(
@@ -346,7 +345,7 @@ p {
     rgba(0, 1, 1, 0.2861519607843137) 75%,
     rgba(31, 188, 189, 0.4514180672268907) 94%
   );
-}
+} */
 
 .mini {
   font-size: medium;
@@ -355,9 +354,14 @@ p {
 .carta {
   position: relative;
   overflow: hidden;
-  max-height: 45rem;
-  min-height: 30rem;
-  min-width: 280px;
+  min-width: min-content;
+  max-height: 43rem;
+  height: 100%;
+}
+
+#carta,
+#cartaQuiz {
+  min-height: 455px;
 }
 
 .info {
@@ -366,8 +370,15 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 255, 172, 0.775);
-  color: black;
+  background: linear-gradient(
+    148deg,
+    rgb(48 133 55) 25%,
+    rgb(90 176 105 / 79%) 49%,
+    rgba(0, 1, 1, 0.2861519607843137) 75%,
+    rgb(123 215 73 / 45%) 94%
+  );
+
+  color: seashell;
   font-weight: bold;
   transition: bottom 1s ease-in-out;
 }
@@ -407,5 +418,5 @@ p {
 
 .coverPortfolio {
   width: 100%;
-  height: 90%;
+  height: 100%;
 }
