--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html,
 body {
   color: seashell;
-  width: 100dvw;
+  width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -10,6 +10,8 @@ body {
   margin-right: auto;
   margin-left: auto;
   padding: 0;
+  overflow-x: hidden;
+  /* overflow: hidden; */
 }
 
 @media (min-width: 1200px) {
@@ -47,6 +49,7 @@ body {
 
   .boxContacts {
     margin-top: 3rem;
+    
   }
 }
 
@@ -59,6 +62,8 @@ h2 {
 }
 .App {
   text-align: center;
+  overflow-y:auto;
+  width:100%;
 }
 
 .App-logo {
@@ -85,7 +90,7 @@ ul {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -107,31 +112,49 @@ ul {
 
 Nav.Item Link {
   margin-right: 30px;
+  
 }
 
 Form.Control {
   margin-bottom: 5em;
 }
 
+.customNavbar{
+  border-bottom: 1px solid rgba(128, 128, 128, 0.367) !important;
+}
+
 .navBar {
   background-color: #283653 !important;
   border: 1 solid seashell !important;
   color: seashell !important;
-
+  width: 100%;
+  position:fixed;
+  top:0;
+  z-index:20000;
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 3em;
   margin-top: 2em;
   padding-left: 2em;
+  width:fit-content;
 }
 
 .nav-link {
   margin-right: 15px;
+  letter-spacing: 1.2px;
+}
+
+.nav-link-selected{
+  margin-right: 15px;
+  margin-top:7px;
+  font-weight: 700;
+  color: rgb(3, 226, 152);
 }
 
 .nav-link:hover {
-  transform: scale(1.2);
+  /* transform: scale(1.2); */
+  font-weight: 700;
   color: rgb(3, 226, 152);
   /* border: 1px solid rgb(3, 226, 152) */
 }
@@ -154,18 +177,52 @@ Form.Control {
 }
 
 /*  CONTACT PAGE */
+.links-social-box{
+  width:auto;
+  gap:20px;
+  background-color: black;
+  padding:10px 15px 0 15px;
+  margin:0;
+  border-radius:8em;
+  border: 1px solid #848c9449;
+  /* animation: BordoColorato 3s linear infinite; */
+}
+
+.icone{
+  color: #dee2e69e;
+}
 
 .icone:hover {
   color: rgb(3, 226, 152);
   transform: scale(1);
 }
 
+.campoForm{
+  background-color: rgba(46, 45, 45, 0.236);
+  color:white;
+}
+
 .campoForm:focus {
-  border: 4px solid rgb(5, 255, 172);
+  border: 2px solid rgb(5, 255, 172);
+  background-color: rgba(46, 45, 45, 0.236);
+}
+
+.campoForm::placeholder {
+  color: #ffffff59;
+  opacity: 1; 
+}
+
+.campoForm:-ms-input-placeholder { /* Per Internet Explorer 10-11 */
+  color: #ffffff59;
+}
+
+.campoForm::-ms-input-placeholder { /* Per Microsoft Edge */
+  color: #ffffff59;
 }
 
 .bordo {
   animation: BordoColorato 3s linear infinite;
+  border-radius:5px;
 }
 
 @keyframes BordoColorato {
@@ -236,6 +293,10 @@ p {
   .frasi i {
     min-width: max-content;
     padding-left: 30px !important;
+  }
+
+  .links-social-box{
+    padding: 8px 20px;
   }
 }
 
